# m55-mve-sdpa-fa2

./: .gitignore  CMakeLists.txt  README.md
cmake/toolchains/: arm-none-eabi-gcc.cmake
platform/qemu-mps3-an547/: qemu_mps3_an547.ld  syscalls_semihost.c  system_ARMCM55.c
src/: main.c
tools/: compare_qemu_baseline.py  gen_model_data.py  test_torch_parity.py  torch_reference.py
